# APEX

./: README.md  Roadmap.txt
APEX-1/APEX1_RTL_complete/apex1/: README.md
APEX-1/APEX1_RTL_complete/apex1/constraints/: apex1.sdc  apex1.upf
APEX-1/APEX1_RTL_complete/apex1/rtl/: apex1_die.sv  apex1_tb.sv
APEX-1/APEX1_RTL_complete/apex1/rtl/control/: power_ctrl.sv  static_sequencer.sv
APEX-1/APEX1_RTL_complete/apex1/rtl/core/: bf16_mul.sv  conv_engine.sv  mac_cell.sv  mxu_cluster.sv  sparsity_engine.sv  systolic_array.sv
APEX-1/APEX1_RTL_complete/apex1/rtl/io/: pcie_host_if.sv
APEX-1/APEX1_RTL_complete/apex1/rtl/memory/: dma_engine.sv  spad_controller.sv
APEX-1/APEX1_RTL_complete/apex1/rtl/pkg/: apex1_pkg.sv
APEX-1/APEX1_RTL_complete/apex1/rtl/special/: allreduce_engine.sv  grad_accumulator.sv  norm_unit.sv  sfu.sv  softmax_unit.sv
APEX-1/Documentation/: APEX1_Architecture_Specification.docx
APEX1_final/apex1/: FIX_SPACES.md  Makefile  OPTIMIZATIONS.md  README.md  compile_array.sh  compile_fullchip.sh  debug_compile.sh  measure_flops.sh  setup_and_run.sh  test_lint.sh
APEX1_final/apex1/obj_dir_array_8/: Vsystolic_array  Vsystolic_array.cpp  Vsystolic_array.h  Vsystolic_array.mk  Vsystolic_array__ConstPool_0.cpp  Vsystolic_array__Syms.cpp  Vsystolic_array__Syms.h  Vsystolic_array___024root.h  Vsystolic_array___024root__DepSet_h5dc85085__0.cpp  Vsystolic_array___024root__DepSet_h5dc85085__0__Slow.cpp  Vsystolic_array___024root__DepSet_hf29b7121__0.cpp  Vsystolic_array___024root__DepSet_hf29b7121__0__Slow.cpp  Vsystolic_array___024root__Slow.cpp  Vsystolic_array___024unit.h  Vsystolic_array___024unit__DepSet_h1935212e__0__Slow.cpp  Vsystolic_array___024unit__Slow.cpp  Vsystolic_array__pch.h  Vsystolic_array__ver.d  Vsystolic_array_classes.mk  Vsystolic_array_mac_cell.h  Vsystolic_array_mac_cell__DepSet_h4bbc20fc__0__Slow.cpp  Vsystolic_array_mac_cell__DepSet_hba29e0e0__0.cpp  Vsystolic_array_mac_cell__DepSet_hba29e0e0__0__Slow.cpp  Vsystolic_array_mac_cell__DepSet_hba29e0e0__1.cpp  Vsystolic_array_mac_cell__Slow.cpp
APEX1_final/apex1/rtl/: apex1_die.sv  apex1_tb.sv
APEX1_final/apex1/rtl/control/: power_ctrl.sv  static_sequencer.sv
APEX1_final/apex1/rtl/core/: bf16_mul.sv  conv_engine.sv  fp8_mul.sv  mac_cell.sv  mxu_cluster.sv  sparsity_engine.sv  systolic_array.sv
APEX1_final/apex1/rtl/io/: pcie_host_if.sv
APEX1_final/apex1/rtl/memory/: dma_engine.sv  spad_controller.sv
APEX1_final/apex1/rtl/pkg/: apex1_pkg.sv
APEX1_final/apex1/rtl/special/: allreduce_engine.sv  grad_accumulator.sv  norm_unit.sv  sfu.sv  softmax_unit.sv
APEX1_final/apex1/tb/: Makefile.tops  apex1_fullchip_tops_tb.sv  apex1_perf_monitor.sv  apex1_tops_coverage.sv  apex1_tops_golden.sv  apex1_tops_tb.sv
APEX1_final/apex1/verilator/: CMakeLists.txt  Makefile  apex1_tops.gtkw  sim_array_tops.cpp  sim_flops.cpp  sim_tops.cpp
Website/: index.html
